<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Just Java</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>

    <string name="quantity">Quantity</string>
    <string name="order_button">Order</string>
    <string name="total">Total Cost</string>


    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="starting_total">€0</string>

    <!--Strings for the Extras heading + checkboxes-->
    <string name="extras">Extras:</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate_sprinkles">Chocolate Sprinkles</string>
    <string name="caramel_syrup">Caramel Syrup</string>



    <!--The cost of different extras to be stored in the tag attribute-->
    <string name="whipped_cream_cost">0.50</string>
    <string name="chocolate_sprinkles_cost">0.50</string>
    <string name="caramel_syrup_cost">0.75</string>

    <!--Email subject and body-->
    <string name="email_summary_subject">
        <xliff:g id="name" example="Reggie">%s</xliff:g>, Your Just Java Order Summary:
    </string>

    <string name="email_summary_body">
        Dear <xliff:g id="name" example="Reggie">%s</xliff:g>,
        \n\nHere are your order details:
        \n\nQuantity: <xliff:g id="quantity" example="2">%s</xliff:g>
        \n<xliff:g id="extras_options" example="Whipped Cream">%s</xliff:g>
        \nTotal Cost: <xliff:g id="total_cost" example="€10">%s</xliff:g>
        \n\nThank you for your order!
    </string>


</resources>
